--- a/ardrone_autonomy/CMakeLists.txt
+++ b/ardrone_autonomy/CMakeLists.txt
@@ -77,7 +77,7 @@ catkin_package(
 # Build [pathced] ardronelib from an external project
 include(ExternalProject)
 ExternalProject_Add(ardronelib
-    GIT_REPOSITORY git://github.com/AutonomyLab/ardronelib.git
+    GIT_REPOSITORY git@github.com:AutonomyLab/ardronelib.git
     GIT_TAG 2f987029c55531e4c0119c3600f9c57f935851ed
     PREFIX ${CATKIN_DEVEL_PREFIX}
     CONFIGURE_COMMAND echo "No configure"
